--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "redux-devtools-extension": "^2.13.8",
+    "thunk": "^0.0.1"
+  }
 }
